<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationandlogin.MainActivity">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="230dp"
        android:layout_height="67dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="28dp"
        android:background="@null"
        android:fontFamily="@font/laptev_font"
        android:text="@string/SignUp"
        android:textColor="@color/general_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="225dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:fontFamily="@font/laptev_font"
        android:text="@string/signIn"
        android:textColor="@color/general_blue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/boncegro_font"
        android:text="@string/app_name"
        android:textColor="@color/general_purple"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:text="У Вашего питомца ещё нет аккаунта?"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="182dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="Введите пароль"
        android:textColor="@color/general_blue"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petName" />

    <EditText
        android:id="@+id/petName"
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:textColor="@color/general_blue"
        android:hint="Введите имя Вашего питомца"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageViewAdministrator"
        android:layout_width="265dp"
        android:layout_height="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/catanddogicon" />
</androidx.constraintlayout.widget.ConstraintLayout>