<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationandlogin.Regustration">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="295dp"
        android:layout_height="98dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/boncegro"
        android:gravity="center"
        android:text="@string/Abilities"
        android:textColor="@color/general_purple"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/laptev_brush"
        android:text="@string/Abilities_1"
        android:textColor="@color/general_blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/laptev_brush"
        android:gravity="right"
        android:text="@string/Abilities_2"
        android:textColor="@color/general_blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/typeOfPet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/typeOfPet"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="casual"
        android:text="Ваш питомец это:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/typeOfPet3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="casual"
        android:text="Придумайте пароль:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/petPasswordReg"
        app:layout_constraintEnd_toEndOf="@+id/petNameReg"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petNameReg" />

    <TextView
        android:id="@+id/typeOfPet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="casual"
        android:text="Вашего питомца зовут:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/petNameReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/petNameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Введите имя"
        android:inputType="textPersonName"
        android:textColor="@color/general_blue"
        app:layout_constraintBottom_toTopOf="@+id/typeOfPet3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfPet2" />

    <EditText
        android:id="@+id/petPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="Введите пароль"
        android:inputType="textPassword"
        android:textColor="@color/general_blue"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/typeOfPet3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/typeOfPet2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfPet">

        <RadioButton
            android:id="@+id/Cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Кошка" />

        <RadioButton
            android:id="@+id/Dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Собака" />
    </RadioGroup>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@null"
        android:fontFamily="@font/laptev_brush"
        android:text="@string/SignUp"
        android:textColor="@color/general_blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petPasswordReg" />

</androidx.constraintlayout.widget.ConstraintLayout>